# Neural

./: CMakeLists.txt
include/: Layer.hpp  Neuron.hpp
source/: Layer.cpp  Neuron.cpp  main.cpp
